--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <p>Um pedacinho do sabor nordestino agora também no horário do almoço</p>
                         <p>Fiquem atentos ao cardápio do dia nas nossas redes</p>
                         <div class="links">
-                            <a href="https://www.instagram.com/stories/pamonhadairis" class="links__acesso" id="links_acesso2">Instagram</a>        
+                            <a href="https://www.instagram.com/" class="links__acesso" id="links_acesso2">Instagram</a>        
                         </div>
                     </div>
                     <div class="bannerimagem">
@@ -80,14 +80,14 @@
 
         <div class="container_contato">
             <a href ="https://wa.me/+5511963220463" target="_blank"><img class="contato_img" src="img/whatsapp_logo.png"></a>
-            <a href="https://www.instagram.com/pamonhadairis/" target="_blank"><img class="contato_img" src="img/instagram_logo.png"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img class="contato_img" src="img/instagram_logo.png"></a>
         </div>
 
         <div class="contato__redes">
             <p class="contato__redes__p1">Venha visitar o melhor do milho da região, feito artesanalmente com muito amor de mãe <span id="contato_coracao">❤</span></p>
             <p class="contato__redes__p2">Funcionamos de Terça à Sexta - 11H às 18H</p>
             <p class="contato__redes__p2">Sábado e Feríados - 11H às 17H</p>
-            <p class="contato__redes__p2">Rua Dona Ana Neri, 140 - MOOCA</p>
+            <p class="contato__redes__p2">Lorem ipsum - MOOCA</p>
         </div>
 
     </footer>
