--- a/pedidos.html
+++ b/pedidos.html
@@ -408,7 +408,7 @@
             <p class="contato__redes__p1">Venha visitar o melhor do milho da região, feito artesanalmente com muito amor de mãe <span id="contato_coracao">❤</span></p>
             <p class="contato__redes__p2">Funcionamos de Terça à Sexta - 11H às 18H</p>
             <p class="contato__redes__p2">Sábado e Feríados - 11H às 17H</p>
-            <p class="contato__redes__p2">Rua Dona Ana Neri, 140 - MOOCA</p>
+            <p class="contato__redes__p2">Lorem ipsum</p>
         </div>
 
     </footer>
