--- a/about.html
+++ b/about.html
@@ -84,15 +84,15 @@
     <footer class="contato">
 
         <div class="container_contato">
-            <a href ="https://wa.me/+5511963220463" target="_blank"><img class="contato_img" src="img/whatsapp_logo.png"></a>
-            <a href="https://www.instagram.com/pamonhadairis/" target="_blank"><img class="contato_img" src="img/instagram_logo.png"></a>
+            <a href ="https://wa.me/+5511000000000" target="_blank"><img class="contato_img" src="img/whatsapp_logo.png"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img class="contato_img" src="img/instagram_logo.png"></a>
         </div>
 
         <div class="contato__redes">
             <p class="contato__redes__p1">Venha visitar o melhor do milho da região, feito artesanalmente com muito amor de mãe <span id="contato_coracao">❤</span></p>
-            <p class="contato__redes__p2">Funcionamos de Terça à Sexta - 11H às 18H</p>
-            <p class="contato__redes__p2">Sábado e Feríados - 11H às 17H</p>
-            <p class="contato__redes__p2">Rua Dona Ana Neri, 140 - MOOCA</p>
+            <p class="contato__redes__p2">Funcionamos de Terça à Sexta - 00H às 00H</p>
+            <p class="contato__redes__p2">Sábado e Feríados - 00H às 00H</p>
+            <p class="contato__redes__p2">Lorem ipsum ipsum ips, 000 - IPsum</p>
         </div>
 
     </footer>
