--- a/pedidos.html
+++ b/pedidos.html
@@ -400,8 +400,8 @@
     <footer class="contato">
 
         <div class="container_contato">
-            <a href ="https://wa.me/+5511963220463" target="_blank"><img class="contato_img" src="img/whatsapp_logo.png"></a>
-            <a href="https://www.instagram.com/pamonhadairis/" target="_blank"><img class="contato_img" src="img/instagram_logo.png"></a>
+            <a href ="https://wa.me/+551100000000" target="_blank"><img class="contato_img" src="img/whatsapp_logo.png"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img class="contato_img" src="img/instagram_logo.png"></a>
         </div>
 
         <div class="contato__redes">
