--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <footer class="contato">
 
         <div class="container_contato">
-            <a href ="https://wa.me/+5511963220463" target="_blank"><img class="contato_img" src="img/whatsapp_logo.png"></a>
+            <a href ="" target="_blank"><img class="contato_img" src="img/whatsapp_logo.png"></a>
             <a href="https://www.instagram.com/" target="_blank"><img class="contato_img" src="img/instagram_logo.png"></a>
         </div>
 
