--- a/cardapio.html
+++ b/cardapio.html
@@ -424,7 +424,7 @@
 
       <div class="container_contato">
           <a href ="https://wa.me/+55110000000000" target="_blank"><img class="contato_img" src="img/whatsapp_logo.png"></a>
-          <a href="https://www.instagram.com/pamonhadairis/" target="_blank"><img class="contato_img" src="img/instagram_logo.png"></a>
+          <a href="https://www.instagram.com" target="_blank"><img class="contato_img" src="img/instagram_logo.png"></a>
       </div>
 
       <div class="contato__redes">
